<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="texto_vivo" >Ahora en Vivo</string>
    <string name="texto_programa" >TEC</string>
    <string name="texto_proximo" >Próximo programa: El Angelus</string>
    <string name="texto_btnvod" >VER VOD</string>
    <string name="texto_destacados" >DESTACADOS</string>

</resources>
